--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from sakofchit.github.io/system.css/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 15 Mar 2024 13:18:32 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-  <title>system.css | A design system for building retro Apple-inspired interfaces</title>
+  <title>Octal Hosting</title>
   <link rel="Shortcut Icon" type="image/x-icon" href="icon.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
