--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <meta property="og:title" content="system.css" />
   <meta name="Description" content="A design system for building retro Apple interfaces" />
   <meta property="og:description" content="A design system for building retro Apple interfaces" />
-
-  <link rel="stylesheet" href="system.css">
-  <link rel="stylesheet" href="docs.css">
+  <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
 </head>
 <body ontouchstart>
   <div class="container">
