--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="sidenav">
     <a href="#about">About</a>
     <a href="#services">Services</a>
-    <a href="#Costs">Costs</a>
+    <a href="#clients">Clients</a>
     <a href="#contact">Contact</a>
     <!-- Add more tabs here if needed -->
   </div>
@@ -56,7 +56,7 @@
     <h1 id="services">Services</h1>
     <p>Your services content goes here.</p>
 
-    <h1 id="Costs">Costs</h1>
+    <h1 id="clients">Clients</h1>
     <p>Your clients content goes here.</p>
 
     <h1 id="contact">Contact</h1>
