--- a/index.html
+++ b/index.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Octal Hosting</title>
+  <title>98.css example</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
-  <style>
-    /* The sidebar menu */
-    .sidenav {
-      height: 100%; /* Full height: remove this if you want "auto" height */
-      width: 160px; /* Set the width of the sidebar */
-      position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-      z-index: 1; /* Stay on top */
-      top: 0; /* Stay at the top */
-      left: 0;
-      background-color: #111; /* Black background */
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 20px;
-    }
-
-    /* The navigation menu links */
-    .sidenav a {
-      padding: 6px 8px 6px 16px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-    }
-
-    /* When you hover over the navigation links, change their color */
-    .sidenav a:hover {
-      color: #f1f1f1;
-    }
-
-    /* Style page content */
-    .main {
-      margin-left: 160px; /* Same as the width of the sidebar */
-      padding: 0px 10px;
-    }
-  </style>
 </head>
 
 <body>
-  <div class="sidenav">
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#clients">Clients</a>
-    <a href="#contact">Contact</a>
-    <!-- Add more tabs here if needed -->
-  </div>
-
-  <div class="main">
-    <h1 id="about">About</h1>
-    <p>Your about content goes here.</p>
-
-    <h1 id="services">Services</h1>
-    <p>Your services content goes here.</p>
-
-    <h1 id="clients">Clients</h1>
-    <p>Your clients content goes here.</p>
-
-    <h1 id="contact">Contact</h1>
-    <p>Your contact information goes here.</p>
-  </div>
+  <div class="window left-window">
+        <nav class="left-nav">
+            <!-- Left window navigation menu -->
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <!-- Add more navigation items here -->
+            </ul>
+        </nav>
+    </div>
+  <div class="window top-window">
+        <nav class="top-nav">
+            <!-- Top window navigation menu -->
+            <ul>
+                <li><a href="#">Forum</a></li>
+                <li><a href="#">Contact</a></li>
+                <!-- Add more navigation items here -->
+            </ul>
+        </nav>
+    </div>
+   <div class="window content-window">
+        <!-- Main content of your website -->
+        <!-- Add your content here -->
+    </div>
+  <div class="window right-window">
+        <!-- Notifications for the visitor -->
+        <!-- Add notification messages here -->
+    </div>
 </body>
 </html>
