--- a/index.html
+++ b/index.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>98.css example</title>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://unpkg.com/98.css" />
-</head>
+  <head>
+    <title>7.css example</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://unpkg.com/7.css" />
+  </head>
 
-<body>
-  <div class="window left-window">
-        <nav class="left-nav">
-            <!-- Left window navigation menu -->
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <!-- Add more navigation items here -->
-            </ul>
-        </nav>
+  <body>
+    <div class="window" style="margin: 32px; width: 250px">
+      <div class="title-bar">
+        <div class="title-bar-text">My First Program</div>
+      </div>
+      <div class="window-body">
+        <p>Hello, world!</p>
+      </div>
     </div>
-  <div class="window top-window">
-        <nav class="top-nav">
-            <!-- Top window navigation menu -->
-            <ul>
-                <li><a href="#">Forum</a></li>
-                <li><a href="#">Contact</a></li>
-                <!-- Add more navigation items here -->
-            </ul>
-        </nav>
-    </div>
-   <div class="window content-window">
-        <!-- Main content of your website -->
-        <!-- Add your content here -->
-    </div>
-  <div class="window right-window">
-        <!-- Notifications for the visitor -->
-        <!-- Add notification messages here -->
-    </div>
-</body>
+  </body>
 </html>
