--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>7.css example</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://unpkg.com/7.css" />
-  </head>
-
-  <body>
-    <div class="window" style="margin: 32px; width: 250px">
-      <div class="title-bar">
-        <div class="title-bar-text">My First Program</div>
-      </div>
-      <div class="window-body">
-        <p>Hello, world!</p>
-      </div>
-    </div>
-  </body>
-</html>
+<div class="window">
+  <div class="bar title">
+    <h1>Octal</h1>
+    <nav>
+      <ul>
+        <li class="close"></li>
+        <li class="maximize"></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="bar info">
+    <ul>
+      <li>1 Item For Sale</li>
+      <li>10% Start Up Bonus</li>
+      <li>ThinkPad Galore</li>
+    </ul>  
+  </div>
+  <div class="appleii-colors">
+    <img src="https://dl.dropboxusercontent.com/u/216723067/pixel-mac-logo.svg" alt="pixel mac logo" />
+    <div class="appleii-color-green"></div>
+    <div class="appleii-color-orange"></div>
+    <div class="appleii-color-burnt-orange"></div>
+    <div class="appleii-color-red"></div>
+    <div class="appleii-color-eggplant"></div>
+    <div class="appleii-color-blue"></div>
+  </div>
+    <div class="scroll right">
+    <div class="window-grab"></div>
+  </div>
+  <div class="scroll bottom"></div>
+</div>
