--- a/index.html
+++ b/index.html
@@ -6,21 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
 </head>
 <body>
-    <div class="window" style="width:30rem;">
-        <div class="title-bar"> 
-            <button aria-label="Close" class="close"></button>
-            <h1 class="title">System.css</h1>
-            <button aria-label="Resize" class="resize"></button>
-        </div>
-        <div class="separator"></div>
-        
-        <div class="window-pane">
-            Hello world!
-        </div>
-    </div>
-
-    
-    <div class="window" style="width:90rem;">
+    <div class="window" style="width:rem;">
         <div class="title-bar"> 
             <button aria-label="Close" class="close"></button>
             <h1 class="title">Avialible Items</h1>
