--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
 
                         </div>
                         <div class="standard-dialog center scale-down" style="width:30rem;">
-                            <h1 class="dialog-text">HP Servers</h1>
+                            <h2 class="dialog-text">HP Servers</h2>
+                            
+                            <h1 class="dialog-text">HP Proliant DL120</h1>
+                            <br>
+                            <h class="dialog-text">6GB Ram Quad Channel</h>
+                            <br>
+                            <h class="dialog-text">Intel Xeon processor</h>
+                            <br>
+                            <h class="dialog-text">Dual 500gb WD Caviar drives</h>
+                            <br>
+                            <h class="dialog-text">Very Efficient 350w consumption</h>
+                            
 
 
                         </div>
